k8s/report-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: report-api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: report-api
  template:
    metadata:
      labels:
        component: report-api
    spec:
      containers:
        - name: report-api
          image: johnhigginsavila/report-api
          ports:
            - containerPort: 5000
