k8s/mongo-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-node-port
spec:
  type: NodePort
  ports:
    - port: 27017
      targetPort: 27017
      nodePort: 30000
  selector:
    component: mongo
