k8s/report-api-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: report-api-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: report-api
  ports:
    - port: 5000
      targetPort: 5000
