k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: web-app-cluster-ip-service
              servicePort: 4000
          - path: /report-api/
            backend:
              serviceName: report-api-cluster-ip-service
              servicePort: 5000
          - path: /middleware-api/
            backend:
              serviceName: middleware-api-cluster-ip-service
              servicePort: 3000
